@@ -22,6 +22,7 @@ LINK_DIRECTORIES(${TIFF_LIB_DIR})
 
 INCLUDE_DIRECTORIES(../sources/core)
 INCLUDE_DIRECTORIES(../sources/terrain)
+INCLUDE_DIRECTORIES(../sources/atmo)
 
 ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS" "-DTIXML_USE_STL")
 
@@ -36,3 +37,6 @@ ADD_SUBDIRECTORY(terrain/terrain3)
 ADD_SUBDIRECTORY(terrain/terrain4)
 ADD_SUBDIRECTORY(terrain/terrain5)
 
+# ADD_SUBDIRECTORY(terrain/exercise1) # ocean plugin required.
+
+ADD_SUBDIRECTORY(atmo/atmo)
