@@ -1,0 +1,14 @@
+SET(TARGET_NAME "proland-atmo-example")
+SET(TARGET_DIR "./")
+
+FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )
+
+ADD_EXECUTABLE(${TARGET_NAME} ${SOURCE_FILES})
+TARGET_LINK_LIBRARIES(${TARGET_NAME} proland ork) #${ATB_LIBS} #${PTHREADS_LIBS}
+
+INSTALL(TARGETS ${TARGET_NAME}
+	RUNTIME DESTINATION ${TARGET_DIR}
+	LIBRARY DESTINATION ${TARGET_DIR})
+
+COMPRESS_BINARY()
+
