@@ -1,2 +1,0 @@
-PATH=..\..\..\bin;%PATH%
-atmo.exe
