@@ -1,0 +1,13 @@
+SET(TARGET_NAME "proland-terrain-exercise1")
+SET(TARGET_DIR "./")
+
+FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )
+
+ADD_EXECUTABLE(${TARGET_NAME} ${SOURCE_FILES})
+TARGET_LINK_LIBRARIES(${TARGET_NAME} proland ork)
+
+INSTALL(TARGETS ${TARGET_NAME}
+	RUNTIME DESTINATION ${TARGET_DIR}
+	LIBRARY DESTINATION ${TARGET_DIR})
+
+COMPRESS_BINARY()
