@@ -245,8 +245,8 @@ void init()
     Logger::ERROR_LOGGER = new FileLogger("ERROR", out, Logger::ERROR_LOGGER);
 
     ptr<XMLResourceLoader> resLoader = new XMLResourceLoader();
-    resLoader->addPath(".");
-    resLoader->addArchive("helloworld.xml");
+    resLoader->addPath("./proland_samples/terrain/exercise1");
+    resLoader->addArchive("./proland_samples/terrain/exercise1/helloworld.xml");
 
     ptr<ResourceManager> resManager = new ResourceManager(resLoader, 8);
 
