@@ -1,2 +1,0 @@
-PATH=..\..\..\bin;%PATH%
-exercise1.exe
