@@ -23,6 +23,7 @@ LINK_DIRECTORIES(${TIFF_LIB_DIR})
 INCLUDE_DIRECTORIES(./)
 INCLUDE_DIRECTORIES(core)
 INCLUDE_DIRECTORIES(terrain)
+INCLUDE_DIRECTORIES(atmo)
 
 ADD_DEFINITIONS(-DPROLAND_LIBRARY)
 ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
@@ -31,9 +32,9 @@ ADD_DEFINITIONS(-DTIXML_USE_STL)
 ADD_DEFINITIONS("-DORK_API=__declspec(dllimport)")
 # ADD_DEFINITIONS("-DPROLAND_API=__declspec(dllexport)")
 
-FILE(GLOB_RECURSE PUBLIC_HEADERS "core/*.h" "terrain/*.h")
+FILE(GLOB_RECURSE PUBLIC_HEADERS "core/*.h" "terrain/*.h" "atmo/*.cpp")
 
-FILE(GLOB_RECURSE SOURCE_FILES "core/*.cpp" "terrain/*.cpp")
+FILE(GLOB_RECURSE SOURCE_FILES "core/*.cpp" "terrain/*.cpp" "atmo/*.cpp")
 
 ADD_MSVC_PRECOMPILED_HEADER("proland_common.h" "proland_common.cpp" SOURCE_FILES)
 
