@@ -72,7 +72,7 @@ public:
  * @param params the atmosphere parameters.
  * @param output the folder where to write the generated tables.
  */
-PROLAND_API void preprocessAtmo(const AtmoParameters &params, const char *output);
+void PROLAND_API preprocessAtmo(const AtmoParameters &params, const char *output);
 
 }
 
